fix overflow

--- a/src/style.css
+++ b/src/style.css
@@ -12,11 +12,16 @@ html{
 
 body{
     height: 100%;
+    width: 100%;
     background-color: #0d47a1;
     /* background-color: #023e7d; */
+}
+
+body>div{
+    height: 100%;
+    overflow: auto;
     display: grid;
     grid-template-rows: 80px 1fr;
-    overflow: auto;
 }
 
 header{
@@ -112,7 +117,6 @@ header>div:last-child>div:first-child{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: auto;
 }
 
 .loader {
